<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".WrapLayoutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/wly_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/wraplayout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <am.widget.wraplayout.WrapLayout
                android:id="@+id/wly_lyt_warp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_wraplayout_content"
                android:horizontalSpacing="10dp"
                android:padding="10dp"
                android:verticalSpacing="10dp"
                app:wlyGravity="top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minWidth="72dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minWidth="86dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white"
                    app:wlyLayout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minHeight="64dp"
                    android:minWidth="142dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minHeight="64dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minHeight="64dp"
                    android:minWidth="108dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minWidth="96dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:minWidth="96dp"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRipple"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/wraplayout_text"
                    android:textColor="@color/white" />

            </am.widget.wraplayout.WrapLayout>

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/wraplayout_text_gravity" />

        <RadioGroup
            android:id="@+id/wly_rg_gravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wly_rb_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wraplayout_gravity_top" />

            <RadioButton
                android:id="@+id/wly_rb_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wraplayout_gravity_center" />

            <RadioButton
                android:id="@+id/wly_rb_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wraplayout_gravity_bottom" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wraplayout_text_horizontal" />

        <SeekBar
            android:id="@+id/wly_sb_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:max="30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wraplayout_text_vertical" />

        <SeekBar
            android:id="@+id/wly_sb_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:max="30" />
    </LinearLayout>

</LinearLayout>
